@@ -1,4 +1,4 @@
 @echo off
 set DIR="%~dp0"
 set JAVA_EXEC="%DIR:"=%\java"
-pushd %DIR% & %JAVA_EXEC%  -jar "%~dp0/../lib/vproxy.jar" %* & popd
+pushd %DIR% & %JAVA_EXEC% --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -jar "%~dp0/../lib/vproxy.jar" %* & popd
